# leptos_axum_prisma_sozu

./: .env.example  .gitignore  Cargo.toml  README.md
ops/: cert-bot.sh  cert-rsync.sh  site-build.sh  site-rsync-db-from-server.sh  site-rsync-db-to-server.sh  site-rsync.sh  site-run.sh  sozu-config.sh  sozu-install.sh  sozu-start.sh  sozu-user.sh
prisma/: schema.prisma
src/: app.rs  lib.rs  main.rs  prisma.rs  ssr_number.rs  state.rs
style/: main.scss
